# amogus

./: .gitignore  CMakeLists.txt  README.md  amogus-server-main.cpp  amogus-win.cpp  amogus-win.h  amogus.cpp  amogus.h  cha_list.txt  divertOff.txt  divertOn.txt  draw.cpp  draw.h  ejected.txt  empty.txt  keybinder-win.cpp  keybinder.cpp  keybinds.txt  main-win.cpp  main.cpp  map.txt  mapwalls.txt  murder.txt  tasks.cpp  tasks.h
